# calido

./: CMakeLists.txt  main.cpp  qpixel.cxx  qpixel.hxx  segmentationgraphicsview.cxx  segmentationgraphicsview.hxx  segmentationwidget.cxx  segmentationwidget.hxx  segmentationwidget.ui
